--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -90,7 +90,7 @@ tags:
 - week44 ✔️ 箴言 +2 传道书 +1 诗篇 +1 基督教与世界宗教+1 Pray +5
 - week45 🔴 天太冷了，起不了床，就2天起来读圣经了。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 《耶稣真貌》+2 Pray +2
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50
@@ -155,7 +155,7 @@ tags:
 - week44 🔴 锻炼 00000🏃 \|  早睡 1110000  \| 早起 01001 \|  站立办公1小时 11111 \| 颈椎推拿 11000 \| 跑步教材学习 00000 \| 鱼油一粒 111111 \| 一杯水 110111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 01100
 - week45 🔴 锻炼 00R  \|  早睡 000 \| 早起 0000  本周最大的挑战，天越来越冷，早晨六点压根起不来。放个大的羽绒服在床边，起床后不要脱睡衣，直接裹上羽绒服。
 - week46 心境差，做什么事情都提不起劲来，也不想反思和复盘。
-- week47(WIP) 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week47 逐渐从忧闷中走出来，不对自己太苛刻 
 - week48 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week49 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week50 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素 
@@ -180,7 +180,7 @@ B: badminton
 - week44 ✔️ Love action 1111101  \| Love words 000000 \| 亲密的身体接触 0001101 \| 意识到并且感谢妻子的付出 000000
 - week45 我一开车就变成一个乱发脾气的怪兽了，让她闭嘴，他很生气。得想办法解决这个问题。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -199,7 +199,7 @@ B: badminton
 - week44 ✔️ 111
 - week45 🔴 1
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -235,7 +235,7 @@ B: badminton
 - week44 ✔️ 扔垃圾两次/收拾盘子 （这周阿姨扔垃圾次数太多了，下周要提醒阿姨交给沐沐）
 - week45 🔴
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -264,7 +264,7 @@ B: badminton
 - week44 ✔️ YouTube Kids +7, Farfaria +1, 洪恩英语 Panda
 - week45 ✔️ YouTube Kids +7, 叽里呱啦 +1, Khan Academy +2
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -301,7 +301,7 @@ B: badminton
 - week44 认识新字： 台，视 复习：窗，间，饿
 - week45 🔴 没怎么学汉字
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -330,7 +330,7 @@ B: badminton
 - week44 ✔️ Khan Academy big/small
 - week45 🔴 这周没学数学
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -360,7 +360,7 @@ B: badminton
 - week44 毫无进展
 - week45 
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -409,7 +409,7 @@ B: badminton
 - week44 ✔️ 周日给爸爸妈妈打电话。但是忘记给奶奶打电话了，周一再打吧。
 - week45 ✔️ 和爸爸打电话了，没有和奶奶打电话。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -514,7 +514,7 @@ B: badminton
 - week44 ✔️ 1101110
 - week45 
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -572,7 +572,7 @@ B: badminton
 - week44✔️ Talk with Daniel / Vincent / Daniel
 - week45 ✔️
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -626,7 +626,7 @@ B: badminton
 - week44 ✔️ SNS fanout / Kinesis / Play IAM policy in the wild.
 - week45 🔴 No Progress
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -677,7 +677,7 @@ B: badminton
 - week44 🔴 expected no progress
 - week45 🔴 expected no progress
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -737,7 +737,7 @@ B: badminton
 - week44 fix a calendar bug / discuss microservice / look for an office.
 - week45 fix calendar bug / HIREtech integration / Help new engineer on board
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -787,7 +787,7 @@ B: badminton
 - week44 No progress.
 - week45 
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
@@ -857,7 +857,7 @@ B: badminton
 - week44 🔴 晚上要面试别人，和祷告会冲突，这周取消
 - week45 🔴
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47(WIP)
+- week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
 - week50 
