--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -93,8 +93,8 @@ tags:
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
 - week49
-- week50
-- week51
+- week50 《信仰与信经》
+- week51 《忏悔录》
 - week52
 
 
@@ -156,10 +156,10 @@ tags:
 - week45 🔴 锻炼 00R  \|  早睡 000 \| 早起 0000  本周最大的挑战，天越来越冷，早晨六点压根起不来。放个大的羽绒服在床边，起床后不要脱睡衣，直接裹上羽绒服。
 - week46 心境差，做什么事情都提不起劲来，也不想反思和复盘。
 - week47 逐渐从忧闷中走出来，不对自己太苛刻 
-- week48 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
-- week49 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
-- week50 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素 
-- week51 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week48 对自己散养
+- week49 对自己散养
+- week50 游泳 +1
+- week51 跑步 +1
 - week52 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 
 简写代表的含义
@@ -181,10 +181,10 @@ B: badminton
 - week45 我一开车就变成一个乱发脾气的怪兽了，让她闭嘴，他很生气。得想办法解决这个问题。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 No progress
+- week49 No progress
+- week50 No progress
+- week51 No progress
 - week52 
 
 ### [增补] 教沐沐圣经故事和原则3次/周 [重中之重]
@@ -200,9 +200,9 @@ B: badminton
 - week45 🔴 1
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
+- week48 No progress
+- week49 让沐沐在班级里教箴言书 ”不义之财，毫无益处“
+- week50 No progress
 - week51 
 - week52 
 
@@ -236,10 +236,10 @@ B: badminton
 - week45 🔴
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 忘记复盘
+- week49 忘记复盘
+- week50 忘记复盘
+- week51 沐沐生病
 - week52 
 
 
@@ -265,10 +265,10 @@ B: badminton
 - week45 ✔️ YouTube Kids +7, 叽里呱啦 +1, Khan Academy +2
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 周二/周四晚上外教上英文课。
+- week49 周二/周四晚上外教上英文课。
+- week50 周二/周四晚上外教上英文课，不过效果没那么好。还是要靠我们自己平时教。
+- week51 沐沐生病
 - week52 
 
 ### [增补] 教沐沐识字
@@ -302,10 +302,10 @@ B: badminton
 - week45 🔴 没怎么学汉字
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 沐沐眼睛有抽动症状，看 iPad 太多，暂停
+- week49 暂停
+- week50 暂停
+- week51 暂停，沐沐兴趣转移到 小猴AI 课，喜欢朗诵故事
 - week52 
 
 ### [增补] 教沐沐数学
@@ -331,10 +331,10 @@ B: badminton
 - week45 🔴 这周没学数学
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 暂停
+- week49 暂停
+- week50 暂停
+- week51 暂停，沐沐兴趣转移到 小猴AI 课，喜欢朗诵故事
 - week52 
 
 ### [增补] 锻炼沐沐的表达能力
@@ -361,10 +361,10 @@ B: badminton
 - week45 
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 幼儿园老师做的非常好，周一放学要给大家讲一个小故事
+- week49 幼儿园老师做的非常好，周一放学要给大家讲一个小故事
+- week50 幼儿园老师做的非常好，周一放学要给大家讲一个小故事
+- week51 小猴AI 课，复述故事。
 - week52 
 
 ### [Tentative] 邀请沐沐的好朋友来家里做客
@@ -382,8 +382,8 @@ B: badminton
 
 - Quarter 1 ✔️
 - Quarter 2 🔴 回老家会影响随申码，沐沐就无法上学了，暂时不敢回家
-- Quarter 3 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
-- Quarter 4
+- Quarter 3 🔴 10.23-10.25 回老家(青岛发现疫情，取消回家行程）
+- Quarter 4 🔴 上海疫情，取消回家行程，看来今年是没戏了。真是思念奶奶。
 
 ### [增补] 每周给爸妈&爷爷奶奶打个电话
 
@@ -410,10 +410,10 @@ B: badminton
 - week45 ✔️ 和爸爸打电话了，没有和奶奶打电话。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 ✔️
+- week49 ✔️
+- week50 ✔️ 虽然打电话了，但是因为妈妈的康复仪一直没修好发了好几次脾气，还不如不打电话。对我爸的性格也是没辙，随他去吧。每个人的人生都是自己掌控的，不要因为别人的痛苦而责备自己。
+- week51 ✔️ 给爸爸妈妈打电话
 - week52 
 
 ### [增补] 每个月给爷爷奶奶爸爸妈妈礼物
@@ -427,7 +427,7 @@ B: badminton
 - Sept. 🔴
 - Oct. 🔴
 - Nov. ✔️ 给妈妈买了康复的椭圆仪锻炼身体，给爸爸妈妈爷爷奶奶买了4斤排骨。
-- Dec.
+- Dec. ✔️ 给妈妈买了胰岛素的笔，血糖试纸
 
 ### 拿到驾照 ✔️
 
@@ -515,9 +515,9 @@ B: badminton
 - week45 
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
+- week48 ✔️
+- week49 ✔️
+- week50 ✔️
 - week51 
 - week52 
 
@@ -573,10 +573,10 @@ B: badminton
 - week45 ✔️
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
+- week49 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
+- week50 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
+- week51 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
 - week52 
 
 
@@ -627,10 +627,10 @@ B: badminton
 - week45 🔴 No Progress
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 🔴 No Progress（在赶 E-Verify 的进度)
+- week49 🔴 No Progress（在赶 E-Verify 的进度)
+- week50 🔴 No Progress（在赶 E-Verify 的进度)
+- week51 🔴 No Progress（在赶 E-Verify 的进度)
 - week52 
 
 ### 4.打磨前端能力，达到初级前端程序员的水平。
@@ -676,12 +676,12 @@ B: badminton
 - week43 🔴 expected no progress
 - week44 🔴 expected no progress
 - week45 🔴 expected no progress
-- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week46 🔴 expected no progress 
+- week47 🔴 expected no progress
+- week48 🔴 expected no progress
+- week49 🔴 expected no progress
+- week50 🔴 expected no progress
+- week51 🔴 expected no progress
 - week52 
 
 ---
@@ -738,10 +738,10 @@ B: badminton
 - week45 fix calendar bug / HIREtech integration / Help new engineer on board
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week48 working on E-Verify
+- week49 working on E-Verify
+- week50 working on E-Verify
+- week51 working on E-Verify
 - week52 
 
 
@@ -787,11 +787,11 @@ B: badminton
 - week44 No progress.
 - week45 
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
-- week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48
-- week49
-- week50 
-- week51 
+- week47 🔴 No Progress
+- week48 一起吃饭
+- week49 🔴 No Progress
+- week50 🔴 No Progress
+- week51 🔴 No Progress
 - week52 
 
 -->
@@ -817,8 +817,11 @@ B: badminton
 - 2020-10-01 ✔️ 国庆节请乐意和涂涂来家里吃大闸蟹。
 - 2020-10-24 ✔️ 全家人和关关一家逛 Costco，和关关喝咖啡，请他们来家里吃螃蟹和烤羊排。
 - Oct.
-- Nov.
-- Dec.
+- 2020-11-28 ✔️ 和关关吴琼喝咖啡，一起包大包子
+- 2020-12-11 ✔️ 周五在我家查经，给小组准备晚餐
+- 2020-12-12 ✔️ 请 Ginger 来家里吃饭
+- 2020-12-16 ✔️ 约恩杰吃饭
+- 2020-12-19 ✔️ 约赛文&Nancy 吃饭
 
 
 ### 2.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
@@ -838,12 +841,12 @@ B: badminton
 	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
 - Sept. ✔️ 2020-09-12 去坤叔家玩，看望他妈妈。
 - Oct. ✔️ 2020-10-03 去 Tim 家玩。本来要去朱家角的，但是看到皓天和沐沐玩的非常好，就修改了计划。
-- Nov.
+- Nov. 和施浩吃饭，告诉他我快崩溃了，我自己的信仰快坍塌了。
 - Dec.
 	
 ### 3. 长期和一个年轻人（向文）保持连接。
 
-彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。g
+彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
 
 - week35 ✔️ 
 - week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
@@ -859,9 +862,9 @@ B: badminton
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48
-- week49
-- week50 
-- week51 
+- week49 ✔️
+- week50 ✔️
+- week51 🔴 周三接待了恩杰，所以没有参加祷告会
 - week52 
 	
 ### 4.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
@@ -879,8 +882,8 @@ B: badminton
 - Aug. 🔴 failed
 - Sept. 🔴 failed
 - Oct. 2020-10-18 和吕林哥哥聊天 ✔️
-- Nov.
-- Dec.
+- Nov. 🔴
+- Dec. 🔴 越来越感觉大家已经结婚生子，都在忙活自己的小家庭，交集越来越少了。
 
 ### 5. 送别人有帮助的书籍
 
@@ -908,6 +911,7 @@ B: badminton
 	- 送琳琳姑姑圣经 ✔️
 	- 送冯阿姨的儿子《欲罢不能》✔️
 	- 送吴琼《非暴力沟通》✔️
+	- 送王恺明《耶稣真貌》
 
 
 ### 6. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -916,7 +920,7 @@ B: badminton
 
 - ✔️ 2020-07-10: 2020年小组计划，第一次沟通
 - ✔️ 2020-09-18: 第三季度沟通
-- 2020-12-25: 第四季度沟通
+- 2020-12-25: 第四季度沟通 🔴 和圣诞节冲突
 
 
 ### 7. 带领3次小组读经，3次小组祷告会。
@@ -933,7 +937,6 @@ B: badminton
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
-- week5 因为疫情，无法聚会。推广 Zoom 来主持周日敬拜。
 - 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
 - 建立了很多微信兴趣小组，让彼此有个交集。(delegate 给合适的人，自己并不擅长）
 - 鼓励坤叔把读经打卡活动扩展到整个教会层面。加入坤叔的这个活动后，我每天都在读经（以前一周最多5次），比以前增加了2天。彼此鼓励让我增长了 40% 的动力。
@@ -964,7 +967,7 @@ B: badminton
 **计划外事情**
 
 - week4 ✔️ 读完《欲罢不能》
-- week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
+- week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences （🔴 事后复盘，我投资个股基本上都是追涨杀跌，并没有什么“独到的眼光”和章法，以后定投指数就可以，不要瞎折腾浪费时间。）
 - week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)，避免对股票上瘾，浪费时间。
 
 ---
@@ -1003,6 +1006,7 @@ B: badminton
 
 update: 感触：世界上就没什么 low-hanging fruit。想成功运营一个微信号，哪有这么简单。随它去吧，佛系维护。
 
+update: 我的文章更多是自言自语，而公众号就像个集市，我不想继续维护公众号了。
 
 ### 4. 欧阳志平邀请的公开课：Anki
 
