--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -32,46 +32,31 @@ tags:
 
 # 个人健康
 
-- 每周两次有氧锻炼
-- 早睡， 22:30 之前睡觉
-- 早起， 06:00 起床
-- 每天站立办公1小时
-- 每天喝1升水 （抄袭了小梅的主意）
-- 工作50分钟，休息10分钟
-- 饭后漱口
-- 吃饭要慢，超过15分钟
-- 晚上吃素
+每日自省模版
 
-每日复盘
-
-- week 1
-
-	| 项目 | 完成度 | 备注 |
-	|:--|:--|
-	| 锻炼 |  |  |
-	| 早睡 |  |  |
-	| 早起 |  |  |
-	| 站立办公1小时 |  |  |
-	| 1L水/天 |  |  |
-	| 工作50m 休息 10m |  |  |
-	| 饭后漱口  |  |  |
-	| 吃饭要慢 |  |  |
-	| 晚上吃素 |  |  |
-
-- week 2
-
+| week x | 完成度 | 备注 |
+|:--|:--|
+| 每周两次有氧锻炼 |  |  |
+| 早睡， 23:00 之前睡觉 |  |  |
+| 早起， 07:00 起床 |  |  |
+| 站立办公1小时 |  |  |
+| 每天喝1升水  |  |  |
+| 工作50m 休息 10m |  |  |
+| 饭后漱口  |  |  |
+| 吃饭要慢 |  |  |
+| 晚上吃素 |  |  |
 
 
 
 # 家庭
 
-## 1. 夫妻关系
+### 1. 夫妻关系
 
 - 帮助妻子设定目标，鼓励和帮助她完成自己的人生计划。
 - 每半年带妻子出去旅游一次。
 
 
-## 2. 教养孩子
+### 2. 教养孩子
 
 我希望孩子在18岁的时候变为什么样子？
 
@@ -86,57 +71,50 @@ tags:
 | 金钱管理 | 管理银行账户，做预算，平衡收支，养成储蓄习惯 | 去广场卖玩具，存钱 |
 
 
-week 1
+### 3.  孝敬父母和爷爷奶奶
 
 
-week 2
-
-
-## 3.  孝敬父母和爷爷奶奶
-
-
-### 3.1 每个季度回家探望爷爷奶奶
+#### 3.1 每个季度回家探望爷爷奶奶
 
 - Quarter 1 
 - Quarter 2 
 - Quarter 3
 - Quarter 4
 
-### 3.2 每个月寄给爸爸妈妈爷爷奶奶礼物。
+#### 3.2 每个月寄给爸爸妈妈爷爷奶奶礼物。
 
 给爷爷奶奶买排骨，打印照片寄回去；给岳父岳母买钙尔奇；给妈妈买血糖试纸。
 
 
-
-### 3.3 每周给爸爸妈妈和爷爷奶奶打电话。
+#### 3.3 每周给爸爸妈妈和爷爷奶奶打电话。
 
 
 
 # 学习
 
 
-## 1. 每天复习 Anki 卡片
+### 1. 每天复习 Anki 卡片
 
 
-## 2. 学习前端，达到初级前端程序员的水平。
+### 2. 学习前端，达到初级前端程序员的水平。
 
-## 3. 练习英文
+### 3. 练习英文
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
-## 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
+### 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
 
 
 # 工作 （还没完全想好）
 
-## 帮助项目切分 MicroService
+### 帮助项目切分 MicroService
 
 - 《Monolith to Microservices》
 - 《Building Microservices》
 - 《Building Event-Driven Microservices》
 
 
-## 在 Onboarding 这个自产品上承担一些产品的职责
+### 在 Onboarding 这个自产品上承担一些产品的职责
 
 这个项目缺产品经理
 
@@ -145,18 +123,18 @@ week 2
 
 # 教会服侍
 
-## 1.开放家庭，每个月请朋友来家里做客
+### 1.开放家庭，每个月请朋友来家里做客
 
 
-## 2. 在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
+### 2. 在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
 
 
-## 3. 长期和一个年轻人（向文）保持连接。
+### 3. 长期和一个年轻人（向文）保持连接。
 
 彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
 
 
-## 4. 送别人有帮助的书籍
+### 4. 送别人有帮助的书籍
 
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
 
@@ -167,45 +145,41 @@ week 2
 
 4. 其他
 
-## 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
+### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
 
 
 
 # 其他业余小爱好
 
-## 组织 Ruby 上海地区的线下聚会。
+### 组织 Ruby 上海地区的线下聚会。
 
-## 写一个教会的管理 app （2021 新主意)
+### 写一个教会的管理 app （2021 新主意)
 
 可以用一个 open source HRIM 改装一下
 
-## 学一下 Anki 的项目源码，尝试提交代码
+### 学一下 Anki 的项目源码，尝试提交代码
 
-## 录一个 Anki 公开课 (optional, 2020, 2021)
+### 录一个 Anki 公开课 (optional, 2020, 2021)
 
-## 用 Python 写个 PubMed 小网站，练习 Python。(optional, low priority, 2020, 2021)
+### 用 Python 写个 PubMed 小网站，练习 Python。(optional, low priority, 2020, 2021)
 
-## 糖尿病食谱小助手 (optional, 2020, 2021)
+### 糖尿病食谱小助手 (optional, 2020, 2021)
 
-## 小朋友打疫苗日历提醒小助手 (optional, 2020, 2021)
+### 小朋友打疫苗日历提醒小助手 (optional, 2020, 2021)
 
-## 微信小程序：保单管家 (optional, 2020, 2021)
+### 微信小程序：保单管家 (optional, 2020, 2021)
 
 共享保单信息给信任的朋友，万一意外发生，朋友可以帮忙处理保单。
 
-## 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。(optional, 2020, 2021)
+### 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。(optional, 2020, 2021)
 
-## 学术造假数据库，给少灵用用看。(optional, 2020, 2021)
-
-
+### 学术造假数据库，给少灵用用看。(optional, 2020, 2021)
 
 
 
+历史存档
 
-
-过去几年的新年计划
-
-
+- [My new year's resolutions for 2020](/plan-for-2020.html)
 - [My new year's resolutions for 2019](/plan-for-2019.html)
 - [My new year's resolutions for 2017 and 2018](/plan-for-2017-and-2018.html)
 - [My new year's resolutions for 2016](/study-plan-2016.html)
