--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -158,8 +158,8 @@ tags:
 - week47 逐渐从忧闷中走出来，不对自己太苛刻 
 - week48 对自己散养
 - week49 对自己散养
-- week50 游泳 +1
-- week51 跑步 +1
+- week50 对自己散养，游泳 +1
+- week51 对自己散养，跑步 +1
 - week52 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 
 简写代表的含义
@@ -178,7 +178,7 @@ B: badminton
 
 - week43 Love action 11101  \| Love words 10100 \| 亲密的身体接触 10100 \| 意识到并且感谢妻子的付出 00000
 - week44 ✔️ Love action 1111101  \| Love words 000000 \| 亲密的身体接触 0001101 \| 意识到并且感谢妻子的付出 000000
-- week45 我一开车就变成一个乱发脾气的怪兽了，让她闭嘴，他很生气。得想办法解决这个问题。
+- week45 我一开车就变成一个乱发脾气的怪兽了，让她闭嘴，这样我可以集中精力开车。她很生气。得想办法解决这个问题。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
 - week48 No progress
@@ -239,7 +239,7 @@ B: badminton
 - week48 忘记复盘
 - week49 忘记复盘
 - week50 忘记复盘
-- week51 沐沐生病
+- week51 沐沐生病，一切暂停
 - week52 
 
 
@@ -268,7 +268,7 @@ B: badminton
 - week48 周二/周四晚上外教上英文课。
 - week49 周二/周四晚上外教上英文课。
 - week50 周二/周四晚上外教上英文课，不过效果没那么好。还是要靠我们自己平时教。
-- week51 沐沐生病
+- week51 周二英语课
 - week52 
 
 ### [增补] 教沐沐识字
@@ -305,7 +305,7 @@ B: badminton
 - week48 沐沐眼睛有抽动症状，看 iPad 太多，暂停
 - week49 暂停
 - week50 暂停
-- week51 暂停，沐沐兴趣转移到 小猴AI 课，喜欢朗诵故事
+- week51 沐沐兴趣转移到 小猴AI 课，喜欢朗诵故事
 - week52 
 
 ### [增补] 教沐沐数学
@@ -405,7 +405,7 @@ B: badminton
 - week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
 - week41 🔴
 - week42 ✔️ 和奶奶聊了聊天
-- week43 ✔️ 和奶奶聊了聊天，她说爷爷喜欢吃排骨。以后每个月京东买点寄回去。 \| 我妈又抱怨我姑姑的懒惰了。两个人真是让人疲倦。一个心胸狭窄，一个成年巨婴。
+- week43 ✔️ 和奶奶聊了聊天，她说爷爷喜欢吃排骨。以后每个月京东买点寄回去。 \| 我妈又抱怨我姑姑的懒惰了。两个人真是让人疲倦。一个心胸狭窄，一个无法自立。
 - week44 ✔️ 周日给爸爸妈妈打电话。但是忘记给奶奶打电话了，周一再打吧。
 - week45 ✔️ 和爸爸打电话了，没有和奶奶打电话。
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
@@ -413,7 +413,7 @@ B: badminton
 - week48 ✔️
 - week49 ✔️
 - week50 ✔️ 虽然打电话了，但是因为妈妈的康复仪一直没修好发了好几次脾气，还不如不打电话。对我爸的性格也是没辙，随他去吧。每个人的人生都是自己掌控的，不要因为别人的痛苦而责备自己。
-- week51 ✔️ 给爸爸妈妈打电话
+- week51 ✔️ 给爸爸妈妈打电话，妈妈又住院。
 - week52 
 
 ### [增补] 每个月给爷爷奶奶爸爸妈妈礼物
@@ -518,7 +518,7 @@ B: badminton
 - week48 ✔️
 - week49 ✔️
 - week50 ✔️
-- week51 
+- week51 ✔️
 - week52 
 
 
@@ -573,10 +573,10 @@ B: badminton
 - week45 ✔️
 - week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
 - week47 逐渐从忧闷中走出来，不对自己太苛刻
-- week48 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
-- week49 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
-- week50 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
-- week51 🔴 开始疯狂敲代码，脑袋进入专注模式，没兴趣和别人沟通。
+- week48 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
+- week49 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
+- week50 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
+- week51 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
 - week52 
 
 
@@ -630,7 +630,7 @@ B: badminton
 - week48 🔴 No Progress（在赶 E-Verify 的进度)
 - week49 🔴 No Progress（在赶 E-Verify 的进度)
 - week50 🔴 No Progress（在赶 E-Verify 的进度)
-- week51 🔴 No Progress（在赶 E-Verify 的进度)
+- week51 🔴 No Progress（在赶 E-Verify 的进度)，感觉今年没戏了。
 - week52 
 
 ### 4.打磨前端能力，达到初级前端程序员的水平。
@@ -778,7 +778,7 @@ B: badminton
 > 2020-10-09 update  
 > 读完《过犹不及》之后，最大的收获是：日常生活中我们非常擅长用内疚感操控别人。教会里也一样，一句“没有爱心”就让别人缴械投降，从而利用别人达到自己的诉求。以后意识到这点，不操纵别人，也避免自己被操纵，同时也努力保护那些心思单纯的人。
 
-> 我服侍是因为喜欢，祝福到别人也是一件开心的事。我要努力让接受帮助的人应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
+> 我服侍是因为喜欢，祝福到别人也是一件开心的事。接受帮助的人也应该意识到我的界限和优先级——你没有我的家人重要，教会的服侍就是排在我的健康，家庭，学习，工作之后。如果有人扮可怜用内疚感来榨取我的时间和资源，或用属灵的大道理来游说我，我会勇敢的说： No，你越界了！
 
 
 <!---### 0.帮助两个好朋友
@@ -820,8 +820,8 @@ B: badminton
 - 2020-11-28 ✔️ 和关关吴琼喝咖啡，一起包大包子
 - 2020-12-11 ✔️ 周五在我家查经，给小组准备晚餐
 - 2020-12-12 ✔️ 请 Ginger 来家里吃饭
-- 2020-12-16 ✔️ 约恩杰吃饭
-- 2020-12-19 ✔️ 约赛文&Nancy 吃饭
+- 2020-12-16 ✔️ 请恩杰来家里吃饭
+- 2020-12-19 ✔️ 请赛文&Nancy 来家里吃饭，下次去他家玩小猫。
 
 
 ### 2.在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
@@ -841,12 +841,12 @@ B: badminton
 	- 要让沐沐坚持每天学习，日拱一卒，不要把全部的压力都集中在人生的一个阶段，太累了。
 - Sept. ✔️ 2020-09-12 去坤叔家玩，看望他妈妈。
 - Oct. ✔️ 2020-10-03 去 Tim 家玩。本来要去朱家角的，但是看到皓天和沐沐玩的非常好，就修改了计划。
-- Nov. 和施浩吃饭，告诉他我快崩溃了，我自己的信仰快坍塌了。
+- Nov. 和施浩吃饭，告诉他我快崩溃了，我的信仰快坍塌了。
 - Dec.
 	
-### 3. 长期和一个年轻人（向文）保持连接。
+### 3. 长期和一个年轻人（向文/小蓝）保持连接。
 
-彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
+每周和他有一次单独的祷告会，聊聊天，彼此帮助，彼此勉励。
 
 - week35 ✔️ 
 - week36 🔴 这周很烦，什么人也不想见，就想自己独处一会。
@@ -864,7 +864,7 @@ B: badminton
 - week48
 - week49 ✔️
 - week50 ✔️
-- week51 🔴 周三接待了恩杰，所以没有参加祷告会
+- week51 🔴 周三接待了恩杰，所以没有参加祷告会。小蓝已经有2个多月缺席祷告会了，他和晓晓今年实在是太忙碌了。
 - week52 
 	
 ### 4.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
@@ -890,6 +890,7 @@ B: badminton
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
 	- Python 大妈 ✔️
 	- 荣安驾校的程教练 ✔️
+	- 送理发店10本圣经 (in progress)
 
 2. 如果朋友准备结婚，刚结婚，或夫妻吵架，送他们《爱的五种语言》
 	- Ben@Workstream ✔️
@@ -911,7 +912,7 @@ B: badminton
 	- 送琳琳姑姑圣经 ✔️
 	- 送冯阿姨的儿子《欲罢不能》✔️
 	- 送吴琼《非暴力沟通》✔️
-	- 送王恺明《耶稣真貌》
+	- 送王恺明《耶稣真貌》(in progress)
 
 
 ### 6. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -920,7 +921,7 @@ B: badminton
 
 - ✔️ 2020-07-10: 2020年小组计划，第一次沟通
 - ✔️ 2020-09-18: 第三季度沟通
-- 2020-12-25: 第四季度沟通 🔴 和圣诞节冲突
+- 2020-12-25: 第四季度沟通 🔴 和圣诞节冲突，大概率取消。
 
 
 ### 7. 带领3次小组读经，3次小组祷告会。
