--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -50,13 +50,13 @@ tags:
 
 # 家庭
 
-### 1. 夫妻关系
+## 1. 夫妻关系
 
 - 帮助妻子设定目标，鼓励和帮助她完成自己的人生计划。
 - 每半年带妻子出去旅游一次。
 
 
-### 2. 教养孩子
+## 2. 教养孩子
 
 我希望孩子在18岁的时候变为什么样子？
 
@@ -71,50 +71,52 @@ tags:
 | 金钱管理 | 管理银行账户，做预算，平衡收支，养成储蓄习惯 | 去广场卖玩具，存钱 |
 
 
-### 3.  孝敬父母和爷爷奶奶
+## 3.  孝敬父母和爷爷奶奶
 
 
-#### 3.1 每个季度回家探望爷爷奶奶
+## 3.1 每个季度回家探望爷爷奶奶
 
 - Quarter 1 
 - Quarter 2 
 - Quarter 3
 - Quarter 4
 
-#### 3.2 每个月寄给爸爸妈妈爷爷奶奶礼物。
+## 3.2 每个月寄给爸爸妈妈爷爷奶奶礼物。
 
 给爷爷奶奶买排骨，打印照片寄回去；给岳父岳母买钙尔奇；给妈妈买血糖试纸。
 
 
-#### 3.3 每周给爸爸妈妈和爷爷奶奶打电话。
+## 3.3 每周给爸爸妈妈和爷爷奶奶打电话。
 
 
 
 # 学习
 
 
-### 1. 每天复习 Anki 卡片
+## 1. 每天复习 Anki 卡片
 
 
-### 2. 学习前端，达到初级前端程序员的水平。
+## 2. 学习前端，达到初级前端程序员的水平。
 
-### 3. 练习英文
+## 3. 练习英文
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
-### 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
+## 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
+
+## 5. 学习画画？
 
 
 # 工作 （还没完全想好）
 
-### 帮助项目切分 MicroService
+## 帮助项目切分 MicroService
 
 - 《Monolith to Microservices》
 - 《Building Microservices》
 - 《Building Event-Driven Microservices》
 
 
-### 在 Onboarding 这个自产品上承担一些产品的职责
+## 在 Onboarding 这个自产品上承担一些产品的职责
 
 这个项目缺产品经理
 
@@ -123,57 +125,65 @@ tags:
 
 # 教会服侍
 
-### 1.开放家庭，每个月请朋友来家里做客
+## 1.开放家庭，每个月请朋友来家里做客
 
 
-### 2. 在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
+## 2. 在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
 
 
-### 3. 长期和一个年轻人（向文）保持连接。
+## 3. 长期和一个年轻人（向文）保持连接。
 
 彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
 
 
-### 4. 送别人有帮助的书籍
+## 4. 送别人有帮助的书籍
 
 1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
 
 2. 如果朋友准备结婚，刚结婚，或夫妻吵架，送他们《爱的五种语言》
 
 
-3. 送给为人父母的朋友育儿用品，尿布，《爱的五种语言》。
+3. 送给新手父母尿布，《爱的五种语言》。
+
 
 4. 其他
 
-### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
+## 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
 
+
+## 自己不擅长的事情，Say No, 找其他人互补。
+
+- 我不喜欢微信和 Signal 中的沟通，即时通讯工具让我的时间碎片化，无法深入思考。
+- 我不喜欢参加对我的大脑和身体毫无益处的娱乐活动，比如游戏，电影，追剧，漫画。但是我喜欢亲近大自然的活动，比如爬山，逛公园。
+- 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。可能是因为组织活动需要大量的沟通，而我厌恶沟通。
+- 我没有时间陪年轻人找乐子，打发时间。
 
 
 # 其他业余小爱好
 
-### 组织 Ruby 上海地区的线下聚会。
+## 组织 Ruby 上海地区的线下聚会。
 
-### 写一个教会的管理 app （2021 新主意)
+## 写一个教会的管理 app （2021 新主意)
 
 可以用一个 open source HRIM 改装一下
 
-### 学一下 Anki 的项目源码，尝试提交代码
+## 学一下 Anki 的项目源码，尝试提交代码
 
-### 录一个 Anki 公开课 (optional, 2020, 2021)
+## 录一个 Anki 公开课 (optional, 2020, 2021)
 
-### 用 Python 写个 PubMed 小网站，练习 Python。(optional, low priority, 2020, 2021)
+## 用 Python 写个 PubMed 小网站，练习 Python。(optional, low priority, 2020, 2021)
 
-### 糖尿病食谱小助手 (optional, 2020, 2021)
+## 糖尿病食谱小助手 (optional, 2020, 2021)
 
-### 小朋友打疫苗日历提醒小助手 (optional, 2020, 2021)
+## 小朋友打疫苗日历提醒小助手 (optional, 2020, 2021)
 
-### 微信小程序：保单管家 (optional, 2020, 2021)
+## 微信小程序：保单管家 (optional, 2020, 2021)
 
 共享保单信息给信任的朋友，万一意外发生，朋友可以帮忙处理保单。
 
-### 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。(optional, 2020, 2021)
+## 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中。(optional, 2020, 2021)
 
-### 学术造假数据库，给少灵用用看。(optional, 2020, 2021)
+## 学术造假数据库，给少灵用用看。(optional, 2020, 2021)
 
 
 
