--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -924,7 +924,7 @@ B: badminton
 - 2020-12-25: 第四季度沟通 🔴 和圣诞节冲突，大概率取消。
 
 
-### 7. 带领3次小组读经，3次小组祷告会。
+### 7. 🔴 带领3次小组读经，3次小组祷告会。
 
 - ✔️ 2020-08-02 小组祷告会
 - ✔️ 2020-08-09 小组祷告会
