--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -88,6 +88,8 @@ tags:
 
 ## 3.3 每周给爸爸妈妈和爷爷奶奶打电话。
 
+多鼓励，少发怒。我妈的性格大变，可能是三次脑梗导致的。如果最终神都不苛责她，我何必苛责她呢。
+
 
 
 # 学习
@@ -104,10 +106,10 @@ tags:
 
 ## 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
 
-## 5. 学习画画？
+## 5. 学习绘画
 
 
-# 工作 （还没完全想好）
+# 工作
 
 ## 帮助项目切分 MicroService
 
@@ -116,16 +118,33 @@ tags:
 - 《Building Event-Driven Microservices》
 
 
-## 在 Onboarding 这个自产品上承担一些产品的职责
+## 做好 Onboarding 这个子产品，技术和产品，两方面都要努力。
 
-这个项目缺产品经理
+- 熟悉主流的 HRIS 系统
+- 熟悉 HR 工作内容
 
 
 
 
 # 教会服侍
 
-## 1.开放家庭，每个月请朋友来家里做客
+自己不擅长的事情，Say No, 找其他人互补。
+
+- 我不喜欢微信和 Signal 中的沟通，即时通讯工具让我的时间碎片化，无法深入思考。
+- 我不喜欢参加对我的大脑和身体毫无益处的娱乐活动，比如游戏，电影，追剧，漫画。但是我喜欢亲近大自然的活动，比如爬山，逛公园。
+- 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。可能是因为组织活动需要大量的沟通，而我厌恶沟通。
+- 我没有时间陪年轻人找乐子，打发时间。
+
+一些预防针
+
+- 若有人委身宜山小组，提前沟通组员的责任，义务，以及惩戒。免的指正时，拉不下脸来。
+- 教会服侍会把人的精力榨的一干二净，竭力前行，量力而行。有些是神的界限之内的事情，不要瞎操心。
+- 不操纵别人，也保护自己/同工免被操纵。不使用“没有爱”，“少爱心”这些政治正确的话责难别人。
+
+
+## 1.开放家庭，每个月请朋友来家里做客。
+
+- 在自己社交能力承受范围之内，如果过于忙碌，就停下来休息。
 
 
 ## 2. 在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
@@ -150,13 +169,6 @@ tags:
 
 ## 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
 
-
-## 自己不擅长的事情，Say No, 找其他人互补。
-
-- 我不喜欢微信和 Signal 中的沟通，即时通讯工具让我的时间碎片化，无法深入思考。
-- 我不喜欢参加对我的大脑和身体毫无益处的娱乐活动，比如游戏，电影，追剧，漫画。但是我喜欢亲近大自然的活动，比如爬山，逛公园。
-- 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。可能是因为组织活动需要大量的沟通，而我厌恶沟通。
-- 我没有时间陪年轻人找乐子，打发时间。
 
 
 # 其他业余小爱好
