--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -17,9 +17,7 @@ tags:
 
 学习神学和哲学。
 
-第三，工作上的侧重
-
-把焦点放到架构，业务上，不要在具体某一种编程语言上花费过多的时间。也不要在一些细节上雕花。
+第三，工作上的侧重。把焦点放到架构，业务上，不要在具体某一种编程语言上花费过多的时间，也不要在一些细节上雕花。
 
 
 # 追求真理
@@ -124,23 +122,22 @@ tags:
 - 熟悉 HR 工作内容
 
 
-
-
 # 教会服侍
 
 自己不擅长的事情，Say No, 找其他人互补。
 
 - 我不喜欢微信和 Signal 中的沟通，即时通讯工具让我的时间碎片化，无法深入思考。
 - 我不喜欢参加对我的大脑和身体毫无益处的娱乐活动，比如游戏，电影，追剧，漫画。但是我喜欢亲近大自然的活动，比如爬山，逛公园。
-- 我不喜欢组织活动。即使成功的组织了活动，也会非常精疲力尽，毫无满足感。可能是因为组织活动需要大量的沟通，而我厌恶沟通。
+- 我不喜欢组织活动，非常精疲力尽，且毫无满足感。可能是因为组织活动需要大量的沟通，而我厌恶沟通。
 - 我没有时间陪年轻人找乐子，打发时间。
 
 一些预防针
 
 - 若有人委身宜山小组，提前沟通组员的责任，义务，以及惩戒。免的指正时，拉不下脸来。
 - 教会服侍会把人的精力榨的一干二净，竭力前行，量力而行。有些是神的界限之内的事情，不要瞎操心。
-- 不操纵别人，也保护自己/同工免被操纵。不使用“没有爱”，“少爱心”这些政治正确的话责难别人。
-
+- 不操纵别人，也保护自己/同工免被操纵。比如“没有爱”这种杀手锏。
+- 如有人消费教会(小组)，矫正他们的预期，而不是增加付出。
+- 声音喊的最响的，只是最响而已，并不是最饿的。不要只聚焦在哭的最响的人身上，而看不到整体的牧养需求。
 
 ## 1.开放家庭，每个月请朋友来家里做客。
 
@@ -175,9 +172,9 @@ tags:
 
 ## 组织 Ruby 上海地区的线下聚会。
 
-## 写一个教会的管理 app （2021 新主意)
+## ~~写一个教会的管理 app （2021 新主意)~~
 
-可以用一个 open source HRIM 改装一下
+~~可以用一个 open source HRIM 改装一下，这是一个糟糕的主意，用了一下 chmeetings.com，什么都被量化，感觉特别不好，人变成了一个数字~~
 
 ## 学一下 Anki 的项目源码，尝试提交代码
 
