--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -97,6 +97,17 @@ tags:
 - week51 《忏悔录》
 - week52
 
+2020总结：
+
+有人说相信是信仰的飞跃，那么我则是鼓足勇气开始了怀疑的飞跃。
+
+质疑《圣经》准确无误  
+质疑三位一体  
+质疑上帝存在  
+质疑耶稣复活  
+质疑圣经的循环引用  
+
+一切我所相信的，都是值得怀疑的。
 
 ---
 
@@ -170,7 +181,11 @@ B: badminton
 1: 做了
 0: 没做
 
----
+2020 总结
+
+年底体检发现脂肪肝，而且体力大不如从前。每周跑步两次明显不够用，开始了在家的锻炼计划。
+
+
 
 ## 家庭
 
@@ -185,7 +200,7 @@ B: badminton
 - week49 No progress
 - week50 No progress
 - week51 No progress
-- week52 
+- week52 No progress
 
 ### [增补] 教沐沐圣经故事和原则3次/周 [重中之重]
 
@@ -204,7 +219,12 @@ B: badminton
 - week49 让沐沐在班级里教箴言书 ”不义之财，毫无益处“
 - week50 No progress
 - week51 
-- week52 
+- week52 我自己都不确信耶稣基督，又如何教沐沐呢？
+
+2020 总结
+
+我自己都不确信耶稣基督，又如何教沐沐呢。
+
 
 ### [增补] 教沐沐服务别人
 
@@ -240,7 +260,7 @@ B: badminton
 - week49 忘记复盘
 - week50 忘记复盘
 - week51 沐沐生病，一切暂停
-- week52 
+- week52 忘记复盘
 
 
 ### [增补] 教沐沐英文
@@ -269,7 +289,7 @@ B: badminton
 - week49 周二/周四晚上外教上英文课。
 - week50 周二/周四晚上外教上英文课，不过效果没那么好。还是要靠我们自己平时教。
 - week51 周二英语课
-- week52 
+- week52 周二英语课
 
 ### [增补] 教沐沐识字
 
@@ -306,7 +326,7 @@ B: badminton
 - week49 暂停
 - week50 暂停
 - week51 沐沐兴趣转移到 小猴AI 课，喜欢朗诵故事
-- week52 
+- week52 我这一个月对孩子的教育越来越不上心了。谢谢刘小坤任劳任怨。
 
 ### [增补] 教沐沐数学
 
@@ -335,7 +355,7 @@ B: badminton
 - week49 暂停
 - week50 暂停
 - week51 暂停，沐沐兴趣转移到 小猴AI 课，喜欢朗诵故事
-- week52 
+- week52 没怎么学
 
 ### [增补] 锻炼沐沐的表达能力
 
@@ -365,7 +385,7 @@ B: badminton
 - week49 幼儿园老师做的非常好，周一放学要给大家讲一个小故事
 - week50 幼儿园老师做的非常好，周一放学要给大家讲一个小故事
 - week51 小猴AI 课，复述故事。
-- week52 
+- week52 参加演讲班
 
 ### [Tentative] 邀请沐沐的好朋友来家里做客
 
@@ -414,7 +434,22 @@ B: badminton
 - week49 ✔️
 - week50 ✔️ 虽然打电话了，但是因为妈妈的康复仪一直没修好发了好几次脾气，还不如不打电话。对我爸的性格也是没辙，随他去吧。每个人的人生都是自己掌控的，不要因为别人的痛苦而责备自己。
 - week51 ✔️ 给爸爸妈妈打电话，妈妈又住院。
-- week52 
+- week52 ✔️ 我妈妈给我打电话，又在抱怨我姑姑，被我直接挂断了。
+
+2020 总结
+
+每次和我妈打电话，她总是陷入到妯娌一堆陈芝麻烂谷子的破事中，十有八九是吐槽和诉苦，要么就是空洞无物的唠叨。我爸爸总是刚愎自用，说话毫无礼貌。
+
+我爸慷慨大方，周济别人，为什么就不能带着自己的妻子一起散散步呢？  
+我爸为什么不能把家里的饮食控制好呢？  
+我爸为什么不和我妈一起研究一下糖尿病的治疗呢？  
+
+我妈得糖尿病二十多年，都说久病成良医，为什么不能多看一些资料呢？  
+为什么不控制好血糖呢？  
+频繁脑梗，自暴自弃，然后又急病乱投医。  
+
+他们就在生活的泥潭中打转，但是自己却从未发现。
+
 
 ### [增补] 每个月给爷爷奶奶爸爸妈妈礼物
 
@@ -519,7 +554,7 @@ B: badminton
 - week49 ✔️
 - week50 ✔️
 - week51 ✔️
-- week52 
+- week52 ✔️
 
 
 ### 2. English
@@ -577,7 +612,7 @@ B: badminton
 - week49 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
 - week50 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
 - week51 🔴 开始疯狂敲代码，脑袋进入专注模式，减少和别人沟通。
-- week52 
+- week52 🔴
 
 
 ### 3.考个 AWS Certified Solutions Architect 证书。
@@ -631,7 +666,13 @@ B: badminton
 - week49 🔴 No Progress（在赶 E-Verify 的进度)
 - week50 🔴 No Progress（在赶 E-Verify 的进度)
 - week51 🔴 No Progress（在赶 E-Verify 的进度)，感觉今年没戏了。
-- week52 
+- week52 🔴 
+
+2020 年总结
+
+年底模拟考试90分，我其实有实力考出来的。但是很多点还没有搞明白，如果匆忙考出来，以后肯定不会搞明白欠缺的知识点了。
+
+把学习的过程当做享受，慢慢考。
 
 ### 4.打磨前端能力，达到初级前端程序员的水平。
 
@@ -682,7 +723,7 @@ B: badminton
 - week49 🔴 expected no progress
 - week50 🔴 expected no progress
 - week51 🔴 expected no progress
-- week52 
+- week52 🔴 expected no progress
 
 ---
 
@@ -742,7 +783,12 @@ B: badminton
 - week49 working on E-Verify
 - week50 working on E-Verify
 - week51 working on E-Verify
-- week52 
+- week52 DevOps stuff
+
+2020 年总结
+
+devops 的 topic，产出还比较多。  
+今年进入 onboarding team 后，没有产生太多商业价值。  
 
 
 ### ~~2.提高自己远程办公的能力~~
@@ -795,6 +841,7 @@ B: badminton
 - week52 
 
 -->
+
 
 ### 1.开放家庭
 
