--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -26,9 +26,36 @@ tags:
 
 读哲学入门书籍《大问题》罗素的《西方哲学简史》，基于以上主干和自己的兴趣，去探究感兴趣的哲学分支。
 
+- week01 神只拣选一部分人是否公平？ / 如果没有神，生命的意义可以有哪些？/ 新无神论一方面说生命没有意义，一方面又说要“人性中的善良天使”，如何自洽？
+- week02 
+- week03 
+- week04 
+- week05
+- week06 
+- week07 
+- week08 
+- week10 
+- week11 
+- week12 
+- week13 
+- week14 
+- week15 
+- week16 
+- week17 
 
 
 # 个人健康
+
+2020年不给自己设定一个健身目标之后，意志越发涣散。还真是应了那句话，如果你的目标是80分，那么只能拿60分。如果你的目标是60分，那么你绝对会不及格。
+
+我的血脂又变高了，体重也增加了，体力下降，大脑的反应变慢。
+
+- 争取跑一次半马
+- 体重降低到 124 斤（现在是136斤）
+- 体脂降低到 20% (现在是 ）
+- 每周两次有氧训练，平时则按照 Nike Training Club 的计划进行训练
+- 控制油脂摄入量，中午吃无油/少油的食物。顺便还能不犯困。
+
 
 每日自省模版
 
@@ -43,8 +70,9 @@ tags:
 | 饭后漱口  |  |  |
 | 吃饭要慢 |  |  |
 | 晚上吃素 |  |  |
+| SPSS 洗鼻子 |  |  |
 
-
+![](/media/files/2021/Ryan-weekly-review-w01.jpg)
 
 # 家庭
 
@@ -68,23 +96,16 @@ tags:
 | 时间管理  | TBD | |
 | 金钱管理 | 管理银行账户，做预算，平衡收支，养成储蓄习惯 | 去广场卖玩具，存钱 |
 
+![](/media/files/2021/solomon-weekly-review-w01.jpg)
 
 ## 3.  孝敬父母和爷爷奶奶
 
-
-## 3.1 每个季度回家探望爷爷奶奶
-
-- Quarter 1 
-- Quarter 2 
-- Quarter 3
-- Quarter 4
-
-## 3.2 每个月寄给爸爸妈妈爷爷奶奶礼物。
+## 3.1 每个月寄给爸爸妈妈爷爷奶奶礼物。
 
 给爷爷奶奶买排骨，打印照片寄回去；给岳父岳母买钙尔奇；给妈妈买血糖试纸。
 
 
-## 3.3 每周给爸爸妈妈和爷爷奶奶打电话。
+## 3.2 每周给爸爸妈妈和爷爷奶奶打电话。
 
 多鼓励，少发怒。我妈的性格大变，可能是三次脑梗导致的。如果最终神都不苛责她，我何必苛责她呢。
 
@@ -95,6 +116,15 @@ tags:
 
 ## 1. 每天复习 Anki 卡片
 
+- week01 CloudFront Signed URL + Private S3 bucket
+- week02 
+- week03 
+- week04 
+- week05
+- week06 
+- week07 
+- week08 
+
 
 ## 2. 学习前端，达到初级前端程序员的水平。
 
@@ -103,9 +133,6 @@ tags:
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
 ## 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
-
-## 5. 学习绘画
-
 
 # 工作
 
@@ -122,59 +149,19 @@ tags:
 - 熟悉 HR 工作内容
 
 
+## Know customers better
+
+Watch Client Video every week, attend meeting with customer
+
+
 # 教会服侍
 
-自己不擅长的事情，Say No, 找其他人互补。
-
-- 我不喜欢微信和 Signal 中的沟通，即时通讯工具让我的时间碎片化，无法深入思考。
-- 我不喜欢参加对我的大脑和身体毫无益处的娱乐活动，比如游戏，电影，追剧，漫画。但是我喜欢亲近大自然的活动，比如爬山，逛公园。
-- 我不喜欢组织活动，非常精疲力尽，且毫无满足感。可能是因为组织活动需要大量的沟通，而我厌恶沟通。
-- 我没有时间陪年轻人找乐子，打发时间。
-
-一些预防针
-
-- 若有人委身宜山小组，提前沟通组员的责任，义务，以及惩戒。免的指正时，拉不下脸来。
-- 教会服侍会把人的精力榨的一干二净，竭力前行，量力而行。有些是神的界限之内的事情，不要瞎操心。
-- 不操纵别人，也保护自己/同工免被操纵。比如“没有爱”这种杀手锏。
-- 如有人消费教会(小组)，矫正他们的预期，而不是增加付出。
-- 声音喊的最响的，只是最响而已，并不是最饿的。不要只聚焦在哭的最响的人身上，而看不到整体的牧养需求。
-
-## 1.开放家庭，每个月请朋友来家里做客。
-
-- 在自己社交能力承受范围之内，如果过于忙碌，就停下来休息。
-
-
-## 2. 在自己社交承受范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
-
-
-## 3. 长期和一个年轻人（向文）保持连接。
-
-彼此帮助，彼此勉励。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
-
-
-## 4. 送别人有帮助的书籍
-
-1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的 NIV 版本，这样他们不会轻易扔掉。
-
-2. 如果朋友准备结婚，刚结婚，或夫妻吵架，送他们《爱的五种语言》
-
-
-3. 送给新手父母尿布，《爱的五种语言》。
-
-
-4. 其他
-
-## 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
-
+生命枯干，各种疑惑，不要勉强自己了。
 
 
 # 其他业余小爱好
 
 ## 组织 Ruby 上海地区的线下聚会。
-
-## ~~写一个教会的管理 app （2021 新主意)~~
-
-~~可以用一个 open source HRIM 改装一下，这是一个糟糕的主意，用了一下 chmeetings.com，什么都被量化，感觉特别不好，人变成了一个数字~~
 
 ## 学一下 Anki 的项目源码，尝试提交代码
 
@@ -194,9 +181,12 @@ tags:
 
 ## 学术造假数据库，给少灵用用看。(optional, 2020, 2021)
 
+## ~~学习绘画~~
+
+身体已经越来越差了，还是先别学画画了，先把锻炼搞好。
 
 
-历史存档
+# 历年新年计划的存档
 
 - [My new year's resolutions for 2020](/plan-for-2020.html)
 - [My new year's resolutions for 2019](/plan-for-2019.html)
