--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -72,8 +72,6 @@ tags:
 | 晚上吃素 |  |  |
 | SPSS 洗鼻子 |  |  |
 
-![](/media/files/2021/Ryan-weekly-review-w01.jpg)
-
 # 家庭
 
 ## 1. 夫妻关系
@@ -96,8 +94,6 @@ tags:
 | 时间管理  | TBD | |
 | 金钱管理 | 管理银行账户，做预算，平衡收支，养成储蓄习惯 | 去广场卖玩具，存钱 |
 
-![](/media/files/2021/solomon-weekly-review-w01.jpg)
-
 ## 3.  孝敬父母和爷爷奶奶
 
 ## 3.1 每个月寄给爸爸妈妈爷爷奶奶礼物。
@@ -108,7 +104,6 @@ tags:
 ## 3.2 每周给爸爸妈妈和爷爷奶奶打电话。
 
 多鼓励，少发怒。我妈的性格大变，可能是三次脑梗导致的。如果最终神都不苛责她，我何必苛责她呢。
-
 
 
 # 学习
@@ -185,6 +180,13 @@ Watch Client Video every week, attend meeting with customer
 
 身体已经越来越差了，还是先别学画画了，先把锻炼搞好。
 
+# Ryan's Weekly Reviews
+
+![](/media/files/2021/Ryan-weekly-review-w01.jpg)
+
+# Solomon's Weekly Reviews
+
+![](/media/files/2021/solomon-weekly-review-w01.jpg)
 
 # 历年新年计划的存档
 
