--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -182,13 +182,27 @@ Watch Client Video every week, attend meeting with customer
 
 # Ryan's Weekly Reviews
 
+week2
 ![](/media/files/2021/Ryan-weekly-review-w02.jpg)
-![](/media/files/2021/ryan-2021-01-17.jpg)
+
+week3
+![](/media/files/2021/2021-01-17-Ryan.jpg)
+
+week4
+![](/media/files/2021/2021-01-25-Ryan.jpeg)
+
 
 # Solomon's Weekly Reviews
 
+week2
 ![](/media/files/2021/solomon-weekly-review-w02.jpg)
-![](/media/files/2021/solomon-2021-01-17.jpg)
+
+week3
+![](/media/files/2021/2021-01-17-Solomon.jpg)
+
+week4
+![](/media/files/2021/2021-01-25-Solomon.jpeg)
+
 
 # 历年新年计划的存档
 
