--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -191,6 +191,10 @@ week3
 week4
 ![](/media/files/2021/2021-01-25-Ryan.jpeg)
 
+week5: 这一周一直在赶 e-verify 的进度，实在是太累了。过高的压力让我周四崩溃了一天，这周读经祷告都很少，宗教生活基本上全部断掉了，哲学上也毫无进度。
+
+![](/media/files/2021/2021-02-01-ryan.jpeg)
+
 
 # Solomon's Weekly Reviews
 
@@ -202,6 +206,9 @@ week3
 
 week4
 ![](/media/files/2021/2021-01-25-Solomon.jpeg)
+
+week5
+![](/media/files/2021/2021-02-01-solomon.jpeg)
 
 
 # 历年新年计划的存档
