--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -178,6 +178,10 @@ week5: 这一周一直在赶 e-verify 的进度，实在是太累了。过高的
 
 ![](/media/files/2021/2021-02-01-ryan.jpeg)
 
+week6 总算忙完了 E-Verify 的集成，绷紧的弦总算放松下来。
+
+![](/media/files/2021/2021-02-08-Ryan.jpeg)
+
 
 # Solomon's Weekly Reviews
 
@@ -192,6 +196,9 @@ week4
 
 week5
 ![](/media/files/2021/2021-02-01-solomon.jpeg)
+
+week6
+![](/media/files/2021/2021-02-08-Solomon.jpeg)
 
 
 # 历年新年计划的存档
