--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -1,5 +1,5 @@
 ---
-title: "2021 Plan"
+title: "2021 Plan for myself"
 layout: post
 guid: 0wemJ2kWYJg
 date: 2020-12-20 00:00:00
@@ -169,6 +169,12 @@ week5: 这一周一直在赶 e-verify 的进度，实在是太累了。过高的
 week6 总算忙完了 E-Verify 的集成，绷紧的弦总算放松下来。
 
 ![](/media/files/2021/2021-02-08-Ryan.jpeg)
+
+week7 体重已经涨到 140斤。
+
+一周两次有氧锻炼压根不够。需要把有氧运动增加到5次。鉴于我们家族的高血脂/糖尿病史，个人健康应该排到最高的日程上，比沐沐的教育都要重要。如果我挂了，就更别提沐沐的教育了。所以下午应该坚持去游泳，让沐沐回家后自己学习。
+
+![](/media/files/2021/2021-02-16-ryan.jpeg)
 
 # 历年新年计划的存档
 
