--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -153,28 +153,50 @@ Watch Client Video every week, attend meeting with customer
 
 # Ryan's Weekly Reviews
 
-week2
-![](/media/files/2021/Ryan-weekly-review-w02.jpg)
+**week2**
 
-week3
-![](/media/files/2021/2021-01-17-Ryan.jpg)
+![](https://mednoter.com/media/files/2021/Ryan-weekly-review-w02.jpg)
 
-week4
-![](/media/files/2021/2021-01-25-Ryan.jpeg)
+**week3**
 
-week5: 这一周一直在赶 e-verify 的进度，实在是太累了。过高的压力让我周四崩溃了一天，这周读经祷告都很少，宗教生活基本上全部断掉了，哲学上也毫无进度。
+![](https://mednoter.com/media/files/2021/2021-01-17-Ryan.jpg)
 
-![](/media/files/2021/2021-02-01-ryan.jpeg)
+**week4**
 
-week6 总算忙完了 E-Verify 的集成，绷紧的弦总算放松下来。
+![](https://mednoter.com/media/files/2021/2021-01-25-Ryan.jpeg)
 
-![](/media/files/2021/2021-02-08-Ryan.jpeg)
+**week5**
 
-week7 体重已经涨到 140斤。
+这一周一直在赶 e-verify 的进度，实在是太累了。过高的压力让我周四崩溃了一天，这周读经祷告都很少，宗教生活基本上全部断掉了，哲学上也毫无进度。
+
+![](https://mednoter.com/media/files/2021/2021-02-01-ryan.jpeg)
+
+**week6**
+
+总算忙完了 E-Verify 的集成，绷紧的弦总算放松下来。
+
+![](https://mednoter.com/media/files/2021/2021-02-08-Ryan.jpeg)
+
+**week7**
+
+体重已经涨到 140斤。
 
 一周两次有氧锻炼压根不够。需要把有氧运动增加到5次。鉴于我们家族的高血脂/糖尿病史，个人健康应该排到最高的日程上，比沐沐的教育都要重要。如果我挂了，就更别提沐沐的教育了。所以下午应该坚持去游泳，让沐沐回家后自己学习。
 
-![](/media/files/2021/2021-02-16-ryan.jpeg)
+![](https://mednoter.com/media/files/2021/2021-02-16-ryan.jpeg)
+
+**week8**
+
+1. 心灵上把健康放在很重要的位置，但却没有实际行动，没有到做每天都锻炼。跑步6公里后，膝盖隐隐作痛，需要3天的时间恢复，所以每周最多只能跑步2次，不要过量。只能在其他项目上找门道了。
+2. 假期作息完全乱掉。
+
+![](https://mednoter.com/media/files/2021/2021-02-22-ryan.jpeg)
+
+**week9**
+
+沐沐开学了，我的生活开始规律化。
+
+
 
 # 历年新年计划的存档
 
