--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -196,6 +196,8 @@ Watch Client Video every week, attend meeting with customer
 
 [健康] 还是没有把锻炼身体放到日程上，只跑步了一次。而且吃辣了，胃难受，吃了3天雷贝拉唑。又熬夜了。
 
+[家庭] 我给奶奶买了一个智能平板电脑，我可以直接打过视频电话去，就可以接通。这样可以随时随地和奶奶聊天了。
+
 [分清主次] 本来我觉得做完了 E-Verify 之后可以休息一段时间，但是事后发现自己还是忙碌的像个陀螺，压根不想停下来。编程就是个高阶游戏，不要因为游戏而忽略了最重要的事情。
 
 [时间安排] 通常我会在早晨有一段安静的时间读经祷告，最近会议越来越多，一周有3天早晨会被别人插进会议。一开始我尝试和组织抵抗，保卫早晨的时间，发现无效。既然无法抵抗，干脆就在中午读圣经和祷告，下午16:30-18:30 不接受会议，专心陪家人。
@@ -207,6 +209,11 @@ Watch Client Video every week, attend meeting with customer
 [AWS solution architect] 在熟悉了 AWS 大部分产品的用途后，RDS，S3，EC2，Redis, Memcached cluster 这些产品确实做的很好，但是除此之外社区对 aws 云原生的东西并不买账，还是更喜欢开源的东西。 你会用 Kinesis 吗？不会，你会选用 Kafka。AWS Solution Architect 水分很大，抓紧考出来，考出来拉倒，就可以专心投入到 MicroService 这个topic 上去了。
 
 ![](https://mednoter.com/media/files/2021/2021-03-01-Ryan.jpeg)
+
+**week10**
+
+![](https://mednoter.com/media/files/2021/2021-03-07-Ryan.jpeg)
+
 
 # 历年新年计划的存档
 
