--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -212,6 +212,16 @@ Watch Client Video every week, attend meeting with customer
 
 **week10**
 
+[健康] 晚上11:00 睡觉还是太晚了，因为有时候偶尔还要和刘小坤随便聊两句。以后干脆22:00 就躺在床上吧，即使睡不着，可以和刘小坤聊聊天，然后睡觉。
+
+[神学] 自从不掺合教会里各种事情之后，心情愉悦。保持距离，当一个老好人真是舒服啊。但是今天的讲道说，这是冷漠，这根本就不是爱别人。但是管闲事真的好累啊，有时候会导致矛盾和冲突，干扰自己心境的平和，导致一个月都无法好好工作。
+
+[哲学] 本周学了一点“正义”，整体毫无进展。我和妻子调侃说，有一天如果我财务自由了，我不想再去读MIT的计算机了，我想去读哲学专业。
+
+[工作] 产品经理动不动就把bug 标记为 P0，我得学会控制优先级，不能被牵着鼻子走。要考虑 Long Term Goal.
+
+[家庭] 沐沐的精力越来越旺盛了，我得想一个周全的办法。
+
 ![](https://mednoter.com/media/files/2021/2021-03-07-Ryan.jpeg)
 
 
