--- a/_posts/2021-03-07-free-will.md
+++ b/_posts/2021-03-07-free-will.md
@@ -17,3 +17,12 @@ tags:
 保罗在罗马书论得救，说和我们的行为无关，全是神的恩典。雅各出生之前，神就定意拣选了他。加尔文说，神威赫赫，人无法拒绝神的救恩。我们得救，或不得救，都不出我们的自由意志，我们也没有决定权。
 
 如果人在得救这件事上没有决定权，为什么他要承担下地狱的责任呢？
+
+
+## 难以理解且看上去冲突的经文
+
+【传3:2】生有时，死有时；栽种有时，拔出所栽种的也有时；
+
+【罗马书 9:11-13】在这对孩子还未出生，还没有显出谁善谁恶之前，上帝为了显明自己拣选人并不是按人的行为，而是按祂自己的旨意， 12 便对利百加说：“将来大的要服侍小的。” 13 正如圣经上说：“我爱雅各，厌恶以扫。”
+
+【彼后3:9】主所应许的尚未成就，有人以为他是耽延，其实不是耽延，乃是宽容你们，不愿有一人沉沦，乃愿人人都悔改。
