--- a/_posts/2021-03-07-free-will.md
+++ b/_posts/2021-03-07-free-will.md
@@ -8,7 +8,7 @@ tags:
   -
 ---
 
-一列火车在铁轨上奔驰，撞死了人。没有人会要求火车去负责，而是要求司机去担责，或者设计监控系统/刹车系统的人去担责。因为火车智能按照铁轨去走，并没有自我意识，也没有选择权。
+一列火车在铁轨上奔驰，撞死了人。没有人会要求火车去负责，而是要求司机去担责，或者设计监控系统/刹车系统的人去担责。因为火车只能按照铁轨去走，并没有自我意识，也没有选择权。
 
 亚当犯罪，后代皆在罪中沉沦，神爱世人，你选择信靠“耶稣”就得救；你掩耳不听，就不得救。得不得救，全在你自己手中，神的救赎是普世的，公义的。
 
