--- a/_posts/2021-03-07-free-will.md
+++ b/_posts/2021-03-07-free-will.md
@@ -8,21 +8,83 @@ tags:
   -
 ---
 
-一列火车在铁轨上奔驰，撞死了人。没有人会要求火车去负责，而是要求司机去担责，或者设计监控系统/刹车系统的人去担责。因为火车只能按照铁轨去走，并没有自我意识，也没有选择权。
+一列火车在铁轨上奔驰，撞死了人。没有人会要求火车去担责，而是要求司机去担责，或者设计监控系统/刹车系统的人去担责。因为火车只能按照铁轨去走，并没有自我意识，也没有选择权。
 
-亚当犯罪，后代皆在罪中沉沦，神爱世人，你选择信靠“耶稣”就得救；你掩耳不听，就不得救。得不得救，全在你自己手中，神的救赎是普世的，公义的。
+在基督徒脑海中一个符合逻辑的救赎论是：亚当是人类的始祖，他一人犯罪，后代皆在罪中沉沦。然而神爱世人，将他的独生儿子赐下，担当所有人的罪。人选择信靠“耶稣”就得救；人若掩耳不听，就走向毁灭。得不得救，全在你自己手中。
 
-这听上去最符合逻辑，也符合神公义和怜悯的属性，但改革宗说这种说法是错误的。
+这听上去最符合逻辑，也符合神公义和怜悯的属性，但加尔文主义说这是错误的。
 
-保罗在罗马书论得救，说和我们的行为无关，全是神的恩典。雅各出生之前，神就定意拣选了他。加尔文说，神威赫赫，人无法拒绝神的救恩。我们得救，或不得救，都不出我们的自由意志，我们也没有决定权。
+加尔文主义，亦称为归正主义，改革宗。是16世纪法国与瑞士基督新教宗教改革家约翰·加尔文毕生之主张，以及支持加尔文的其他神学家意见的统称。因加尔文等人认为教义应当回归《圣经》，应该恢复被天主教会所遗弃的奥古斯丁“神恩独作”（独作说），反对天主教神学主流的“神人合作说”，因此加尔文派之神学传统常被称为“归正神学”或“改革宗神学”（Reformed Theology）
 
-如果人在得救这件事上没有决定权，为什么他要承担下地狱的责任呢？
+加尔文有五点要义，这五点教义的英文首字字母恰好能拼成“Tulip”，即“郁金香”。
+
+1. 全然败坏（Total depravity）或完全无能力（Total inability），人类由于亚当的堕落导致原罪，而无法以自己的能力作任何灵性上的善事。
+2. 无条件的拣选（Unconditional selection），上帝无条件地拣选得救者，并非因为该人的行善积德，也非预言了该人即将因信称义。
+3. 限定的代赎（Limited atonement），基督之死是为那些天选之人而赎罪，不是为世上所有的人。
+4. 不可抗拒的恩典（Irresistible grace），又称有效的恩典（Efficacious grace），神威赫赫，人无法拒绝神的救恩，神恩是无法拒绝的条件。
+5. 圣徒恒忍蒙保守（Perseverence of the saints），又称永远的保障（Eternal security）、一旦得救永恒得救（Once saved, always saved，OSAS）已得到的救恩不会丧失，神必能保守并引导天选之人在信仰的路上得胜。
 
 
-## 难以理解且看上去冲突的经文
+保罗在罗马书非常完备的额论述了得救与行为毫无关系，完全是出于神的恩典。雅各出生之前，神就定意拣选了他，那时的雅各还在母腹之中。
 
-【传3:2】生有时，死有时；栽种有时，拔出所栽种的也有时；
+>【罗马书 9:11-13】在这对孩子还未出生，还没有显出谁善谁恶之前，上帝为了显明自己拣选人并不是按人的行为，而是按祂自己的旨意， 便对利百加说：“将来大的要服侍小的。” 正如圣经上说：“我爱雅各，厌恶以扫。”
 
-【罗马书 9:11-13】在这对孩子还未出生，还没有显出谁善谁恶之前，上帝为了显明自己拣选人并不是按人的行为，而是按祂自己的旨意， 12 便对利百加说：“将来大的要服侍小的。” 13 正如圣经上说：“我爱雅各，厌恶以扫。”
+加尔文第四点要义说，神威赫赫，人无法拒绝神的救恩。我们得救，不是出于我们的自由意志，我们也没有决定权。
+
+## 疑问1：毫无选择人要为下地狱担责吗？
+
+一个张三的人，他出生的时候就占满了父亲的罪，神也没有拣选他，他下地狱了。在得救这件事情上，他没有任何的选择权。
+
+如果张三在得救这件事上没有选择权，为什么他要承担下地狱的责任呢？
+
+## 疑问2：神公义吗？
+
+既然救恩不是普世的，只是给那些被拣选的人，为什么圣经里还要有这种假惺惺的经文呢 “神愿万人得救”
 
 【彼后3:9】主所应许的尚未成就，有人以为他是耽延，其实不是耽延，乃是宽容你们，不愿有一人沉沦，乃愿人人都悔改。
+
+【约翰福音3:16】神爱世人，甚至赐下他的独生子，好让所有信他的人不至于灭亡，反得永恒的生命
+
+## 加尔文信徒的解释
+
+一个加尔文信徒用以下例子来向我解释预定论和神的公义并不矛盾。
+
+你走在广场上，恰巧看到广场上有十个乞丐。于是你掏出五元钱，给了其中一个乞丐。其他九个乞丐因为没有收到钱就有资格臭骂你不公平吗？
+
+断乎没有！
+
+一，乞丐本来一无所有。二，你没有义务救济乞丐。三，你想怜悯谁，就怜悯谁，你有施恩的主权。
+
+## 我为什么有两点疑问呢？
+
+当我提出两点疑问的时候，我的逻辑的链条是如何工作的呢？
+
+我有个前设：人若无选择权，就不应该承担任何责任。
+
+人世间充满了不义，嫉妒，谋杀，贪婪，冷漠，这不是我们的错。是亚当的错，如果他当初不悖逆上帝，我们何至于这么惨，是亚当这个先祖把罪的病毒传染给了所有人！亚当应该替所有的后代承担罪的代价——死亡，他应该下无数次地狱，承受一千倍，一万倍，一亿倍的死亡。
+
+逻辑的链条到这似乎还是还是合理的。
+
+然后我开始逐渐的演绎：亚当本身也是一个破产的人，他无法偿债。我得找个可以担责的人敲诈！所以我来敲诈上帝不公义，没有救赎所有人。
+
+
+我的逻辑链条
+
+1. 亚当犯罪，后代在罪中沉沦。
+
+2. 我出生就占满了罪，因为没有选择权，所以我不应该承担下地狱的责任。
+
+3. 亚当应该担责。
+
+4. 亚当是一个破产的人，他没有能力担责。但是很巧，他有个有钱的爸爸，我要敲诈他承担连带责任。
+	- 他在生亚当的时候，本可以把亚当生的像机器人，不犯罪，这样后代也不会陷入罪中。
+	- 他可以帮亚当所有孩子的把罪债还了。
+
+5. 然而，上帝只帮一部分亚当的子孙偿还了罪债，救赎了他们。
+
+6. 我质疑上帝的公义。
+
+## 结论
+
+“我没有选择权”是个悲剧，但是无法成为敲诈施恩者的理由。
+
