--- a/_posts/2021-03-07-free-will.md
+++ b/_posts/2021-03-07-free-will.md
@@ -59,17 +59,6 @@ tags:
 
 当我提出两点疑问的时候，我的逻辑的链条是如何工作的呢？
 
-我有个前设：人若无选择权，就不应该承担任何责任。
-
-人世间充满了不义，嫉妒，谋杀，贪婪，冷漠，这不是我们的错。是亚当的错，如果他当初不悖逆上帝，我们何至于这么惨，是亚当这个先祖把罪的病毒传染给了所有人！亚当应该替所有的后代承担罪的代价——死亡，他应该下无数次地狱，承受一千倍，一万倍，一亿倍的死亡。
-
-逻辑的链条到这似乎还是还是合理的。
-
-然后我开始逐渐的演绎：亚当本身也是一个破产的人，他无法偿债。我得找个可以担责的人敲诈！所以我来敲诈上帝不公义，没有救赎所有人。
-
-
-我的逻辑链条
-
 1. 亚当犯罪，后代在罪中沉沦。
 
 2. 我出生就占满了罪，因为没有选择权，所以我不应该承担下地狱的责任。
@@ -77,14 +66,20 @@ tags:
 3. 亚当应该担责。
 
 4. 亚当是一个破产的人，他没有能力担责。但是很巧，他有个有钱的爸爸，我要敲诈他承担连带责任。
-	- 他在生亚当的时候，本可以把亚当生的像机器人，不犯罪，这样后代也不会陷入罪中。
-	- 他可以帮亚当所有孩子的把罪债还了。
 
 5. 然而，上帝只帮一部分亚当的子孙偿还了罪债，救赎了他们。
 
 6. 我质疑上帝的公义。
 
-## 结论
+
+**我有个前设，人若无选择权，就不应该承担任何责任。** 人世间充满了不义，嫉妒，谋杀，贪婪，冷漠，这不是我们的错。是亚当的错，如果他当初不悖逆上帝，我们何至于这么惨，是亚当这个先祖把罪的病毒传染给了所有人！亚当应该替所有的后代承担罪的代价——死亡，他应该下无数次地狱，承受一千倍，一万倍，一亿倍的死亡。
+
+逻辑的链条到这似乎也没有什么问题。
+
+然后我开始逐渐的演绎：亚当本身也是一个破产的人，他无法偿债。我得找个可以担责的人敲诈！我在很多方面可以敲诈上帝：
+
+1. 上帝在生亚当的时候，本可以把亚当生的像机器人，不犯罪，这样后代也不会陷入罪中。
+2. 上帝可以按照我喜欢的方式“帮亚当所有孩子的把罪债还了”，而不是只拣选一部分人。
 
 “我没有选择权”是个悲剧，但是无法成为敲诈施恩者的理由。
 
