--- a/_posts/2021-03-07-free-will.md
+++ b/_posts/2021-03-07-free-will.md
@@ -33,7 +33,7 @@ tags:
 
 ## 疑问1：毫无选择人要为下地狱担责吗？
 
-一个张三的人，他出生的时候就占满了父亲的罪，神也没有拣选他，他下地狱了。在得救这件事情上，他没有任何的选择权。
+一个叫张三的人，他出生的时候就占满了父亲的罪，神也没有拣选他，他下地狱了。在得救这件事情上，他没有任何的选择权。
 
 如果张三在得救这件事上没有选择权，为什么他要承担下地狱的责任呢？
 
@@ -49,15 +49,13 @@ tags:
 
 一个加尔文信徒用以下例子来向我解释预定论和神的公义并不矛盾。
 
-你走在广场上，恰巧看到广场上有十个乞丐。于是你掏出五元钱，给了其中一个乞丐。其他九个乞丐因为没有收到钱就有资格臭骂你不公平吗？
+我走在广场上，恰巧看到广场上有十个乞丐。于是我掏出五元钱，给了其中一个乞丐。其他九个乞丐因为没有收到钱就有资格臭骂我不公平吗？
 
-断乎没有！
+没有资格！
 
-一，乞丐本来一无所有。二，你没有义务救济乞丐。三，你想怜悯谁，就怜悯谁，你有施恩的主权。
+一，乞丐本来一无所有。二，我没有义务救济乞丐。三，我想怜悯谁，就怜悯谁，我有施恩的主权。
 
-## 我为什么有两点疑问呢？
-
-当我提出两点疑问的时候，我的逻辑的链条是如何工作的呢？
+既然是这样，我为什么要质疑上帝的公义呢。我的逻辑的链条是如何工作的呢？
 
 1. 亚当犯罪，后代在罪中沉沦。
 
@@ -65,21 +63,19 @@ tags:
 
 3. 亚当应该担责。
 
-4. 亚当是一个破产的人，他没有能力担责。但是很巧，他有个有钱的爸爸，我要敲诈他承担连带责任。
+4. 亚当是一个破产的人，他没有能力担责。但是很巧，他有个有钱的爸爸，我可以要求他承担连带责任。
 
-5. 然而，上帝只帮一部分亚当的子孙偿还了罪债，救赎了他们。
-
-6. 我质疑上帝的公义。
+5. 上帝帮一部分亚当的子孙偿还了罪债，这成为我敲诈上帝公义的借口。
 
 
 **我有个前设，人若无选择权，就不应该承担任何责任。** 人世间充满了不义，嫉妒，谋杀，贪婪，冷漠，这不是我们的错。是亚当的错，如果他当初不悖逆上帝，我们何至于这么惨，是亚当这个先祖把罪的病毒传染给了所有人！亚当应该替所有的后代承担罪的代价——死亡，他应该下无数次地狱，承受一千倍，一万倍，一亿倍的死亡。
 
 逻辑的链条到这似乎也没有什么问题。
 
-然后我开始逐渐的演绎：亚当本身也是一个破产的人，他无法偿债。我得找个可以担责的人敲诈！我在很多方面可以敲诈上帝：
+然后我开始逐渐的演绎：亚当本身也是一个破产的人，他无法偿债。我得找个可以担责的人敲诈，于是我开始敲诈上帝：
 
-1. 上帝在生亚当的时候，本可以把亚当生的像机器人，不犯罪，这样后代也不会陷入罪中。
-2. 上帝可以按照我喜欢的方式“帮亚当所有孩子的把罪债还了”，而不是只拣选一部分人。
+1. 你在生亚当的时候，本可以把亚当生的像机器人，不犯罪，这样后代也不会陷入罪中。
+2. 你可以帮亚当所有孩子的把罪债还了，而不是只拣选一部分人。
 
 “我没有选择权”是个悲剧，但是无法成为敲诈施恩者的理由。
 
