--- a/_posts/2021-03-07-free-will.md
+++ b/_posts/2021-03-07-free-will.md
@@ -8,8 +8,6 @@ tags:
   -
 ---
 
-一列火车在铁轨上奔驰，撞死了人。没有人会要求火车去担责，而是要求司机去担责，或者设计监控系统/刹车系统的人去担责。因为火车只能按照铁轨去走，并没有自我意识，也没有选择权。
-
 在基督徒脑海中一个符合逻辑的救赎论是：亚当是人类的始祖，他一人犯罪，后代皆在罪中沉沦。然而神爱世人，将他的独生儿子赐下，担当所有人的罪。人选择信靠“耶稣”就得救；人若掩耳不听，就走向毁灭。得不得救，全在你自己手中。
 
 这听上去最符合逻辑，也符合神公义和怜悯的属性，但加尔文主义说这是错误的。
@@ -31,11 +29,13 @@ tags:
 
 加尔文第四点要义说，神威赫赫，人无法拒绝神的救恩。我们得救，不是出于我们的自由意志，我们也没有决定权。
 
-## 疑问1：毫无选择人要为下地狱担责吗？
+## 疑问1：人如果没有选择权，要承担下地狱的责任吗？
 
-一个叫张三的人，他出生的时候就占满了父亲的罪，神也没有拣选他，他下地狱了。在得救这件事情上，他没有任何的选择权。
+一列火车在铁轨上奔驰，撞死了人。没有人会要求火车去担责，而是要求司机去担责，或者设计监控系统/刹车系统的人去担责。因为火车只能按照铁轨去走，并没有自我意识，也没有选择权。
 
-如果张三在得救这件事上没有选择权，为什么他要承担下地狱的责任呢？
+一个精神病人，在疾病发作的时候杀了人，法律上也不会要求他偿命。因为他并不能自控。
+
+到了加尔文的救赎，一个叫张三的人，他出生的时候就占满了父亲的罪，神也没有拣选他，他下地狱了。在得救这件事情上，他没有任何的选择权。如果张三在得救这件事上没有选择权，为什么他要承担下地狱的责任呢？
 
 ## 疑问2：神公义吗？
 
