--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -225,6 +225,19 @@ Watch Client Video every week, attend meeting with customer
 ![](https://mednoter.com/media/files/2021/2021-03-07-Ryan.jpeg)
 
 
+**week11**
+
+时间啊时间，没有时间！
+
+每到周末，我都忙的像个陀螺，在到处赶场子。本周我心里很不爽的一件事情，为什么每个周末要2个大人看一个孩子。完全反了，应该一个大人看4个孩子。其他大人学习，充电，找点乐子。
+
+小朋友和小朋友一起玩更开心。
+
+大人自己学学习，也更开心。
+
+![](https://mednoter.com/media/files/2021/2021-03-15-Ryan.jpeg)
+
+
 # 历年新年计划的存档
 
 - [My new year's resolutions for 2020](/plan-for-2020.html)
