--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -238,6 +238,37 @@ Watch Client Video every week, attend meeting with customer
 ![](https://mednoter.com/media/files/2021/2021-03-15-Ryan.jpeg)
 
 
+**week12**
+
+[家庭] 这周的家庭教育会议是以激烈的吵架进行的。后来和刘小坤静下心来分析为什么吵？你内心真正的需要是什么？彼此做什么可以满足对方？
+
+[圣经学习] 最近开始转变读圣经的心态：把耶稣当成来自另外一个世界的真人，去推敲他说的话有没有道理。而不是内心就觉得他是假的。
+
+![](https://mednoter.com/media/files/2021/2021-03-22-Ryan.jpeg)
+
+**week13**
+
+[家庭] 架差不多炒完了。吕小荣的主要原因是太迷恋工作了，完全不自知。妻子需要关爱，一起陪伴，但是我没有觉察到她已经枯竭了。
+
+最终商量的结论：
+
+周一/周三/周六：吕小荣，带孩子，做早饭。周二，周四，晚上可以加班。
+
+周二/周四：刘小坤带孩子。带孩子的时候就专心带，不要发脾气，不要边看手机边吊儿郎当的带孩子。
+
+后续的方案会进一步再完善。整体的目标就是：
+
+1. 我不能一天到晚加班，不照顾孩子。
+2. 我是个话少的人，和别人说话让我精疲力尽，周末需要半天独处的时间，恢复精力。
+3. 刘小坤照顾孩子时要专心，不能边看手机边照顾。
+4. 以后刘小坤不能再把自己发不出论文的事情怪到我头上，说我不给她时间。
+5. 如果没有经过我的同意，私自给沐沐报了培训班，自己保定，不要怪罪另一方不帮忙。
+6. 我得提高工作效率，上班时间认真工作，不要划水。下班之后就专心带孩子，陪老婆，运动。不要像国企一样低效率。
+
+此外我们家女人容不得一点点大男子主义，赚钱多也没用，我要好自为之，不要什么活都丢给刘小坤。
+
+
+
 # 历年新年计划的存档
 
 - [My new year's resolutions for 2020](/plan-for-2020.html)
