--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -268,6 +268,15 @@ Watch Client Video every week, attend meeting with customer
 此外我们家女人容不得一点点大男子主义，赚钱多也没用，我要好自为之，不要什么活都丢给刘小坤。
 
 
+**week14**
+
+本周非常忙碌，基本没时间复盘时间开销。
+
+- Max 来沪，约了 Hazel 来我家办公，差不多天天开会。
+- 周六/周日/周一是清明节，和英杰一家去杭州玩了三天。
+
+
+
 
 # 历年新年计划的存档
 
