--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -40,21 +40,6 @@ tags:
 - 控制油脂摄入量，中午吃无油/少油的食物。顺便还能不犯困。
 
 
-每日自省模版
-
-| week x | 完成度 | 备注 |
-|:--|:--|
-| 每周两次有氧锻炼 |  |  |
-| 早睡， 23:00 之前睡觉 |  |  |
-| 早起， 07:00 起床 |  |  |
-| 站立办公1小时 |  |  |
-| 每天喝1升水  |  |  |
-| 工作50m 休息 10m |  |  |
-| 饭后漱口  |  |  |
-| 吃饭要慢 |  |  |
-| 晚上吃素 |  |  |
-| SPSS 洗鼻子 |  |  |
-
 # 家庭
 
 ## 1. 夫妻关系
@@ -98,7 +83,11 @@ tags:
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
-## 4. 拿到 AWS Certified Solutions Architect 证书 (2020)
+## 4. 拿到 AWS Certified Solutions Architect 证书
+
+![](https://mednoter.com/media/files/2021/2021-04-17_18-40-27.jpg)
+
+
 
 # 工作
 
