--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -265,6 +265,18 @@ Watch Client Video every week, attend meeting with customer
 - 周六/周日/周一是清明节，和英杰一家去杭州玩了三天。
 
 
+**week15**
+
+![](https://mednoter.com/media/files/2021/2021-04-12-Ryan.jpeg)
+
+**week16**
+
+- 考过 AWS Solution Architect Associate 的考试。
+- 运动啊运动，我对运动的优先级还是排的太低。
+- 针对小组聚会吊儿郎当的情况，警醒大家一下。
+
+![](https://mednoter.com/media/files/2021/2021-04-19-Ryan.jpeg)
+
 
 
 # 历年新年计划的存档
