--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -140,6 +140,9 @@ Watch Client Video every week, attend meeting with customer
 
 身体已经越来越差了，还是先别学画画了，先把锻炼搞好。
 
+## 可以弄一个 AWS solution Architect Associate 的真题网站
+
+
 # Ryan's Weekly Reviews
 
 **week2**
@@ -277,7 +280,9 @@ Watch Client Video every week, attend meeting with customer
 
 ![](https://mednoter.com/media/files/2021/2021-04-19-Ryan.jpeg)
 
+**week17**
 
+![](https://mednoter.com/media/files/2021/2021-04-26-Ryan.jpeg)
 
 # 历年新年计划的存档
 
