--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -35,7 +35,7 @@ tags:
 
 - 争取跑一次半马
 - 体重降低到 124 斤（现在是136斤）
-- 体脂降低到 20% (现在是 ）
+- 体脂降低到 20% (现在是 ___）
 - 每周两次有氧训练，平时则按照 Nike Training Club 的计划进行训练
 - 控制油脂摄入量，中午吃无油/少油的食物。顺便还能不犯困。
 
@@ -83,7 +83,7 @@ tags:
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
-## 4. 拿到 AWS Certified Solutions Architect 证书
+## 4. 拿到 AWS Certified Solutions Architect 证书 ✔
 
 ![](https://mednoter.com/media/files/2021/2021-04-17_18-40-27.jpg)
 
@@ -281,6 +281,20 @@ Watch Client Video every week, attend meeting with customer
 ![](https://mednoter.com/media/files/2021/2021-04-19-Ryan.jpeg)
 
 **week17**
+
+健康
+
+- 情感上觉得身体很重要，行为上毫无作为。
+- 21:30 开完组会之后，不再和别人闲扯工作的事情了，抓紧睡觉。不要透支自己的身体。
+- 工作的时候好好工作，下班之后就不要再开电脑了。
+
+信仰
+
+- 除了工作，我该如何找到适合自己家庭的安息方式呢？离开屏幕，离开电脑。
+
+家庭
+
+- 这周沐沐咳嗽，在家待了整整一周。他天天叽里呱啦的说个不停，我真是累死了。
 
 ![](https://mednoter.com/media/files/2021/2021-04-26-Ryan.jpeg)
 
