--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -298,6 +298,17 @@ Watch Client Video every week, attend meeting with customer
 
 ![](https://mednoter.com/media/files/2021/2021-04-26-Ryan.jpeg)
 
+**week18**
+
+
+**week19**
+
+周日到周三是五一假期，回来之后周六也要上班，过的挺辛苦。没有打印表格，也没有复盘。
+
+读了奥古斯丁的《论自由意志》
+
+
+
 # 历年新年计划的存档
 
 - [My new year's resolutions for 2020](/plan-for-2020.html)
