--- a/_posts/2020-12-01-plan-for-2021.md
+++ b/_posts/2020-12-01-plan-for-2021.md
@@ -67,16 +67,6 @@ tags:
 
 ## 1. 每天复习 Anki 卡片
 
-- week01 CloudFront Signed URL + Private S3 bucket
-- week02 
-- week03 
-- week04 
-- week05
-- week06 
-- week07 
-- week08 
-
-
 ## 2. 学习前端，达到初级前端程序员的水平。
 
 ## 3. 练习英文
@@ -306,6 +296,14 @@ Watch Client Video every week, attend meeting with customer
 周日到周三是五一假期，回来之后周六也要上班，过的挺辛苦。没有打印表格，也没有复盘。
 
 读了奥古斯丁的《论自由意志》
+
+**week20**
+
+这周看了《惟有基督》，有感而发，写了《我为什么不认识福音》
+
+学习了 Terraform，太有用了，可以一键生成一套环境。
+
+![](https://mednoter.com/media/files/2021/2021-05-17-Ryan.jpeg)
 
 
 
